--- a/app/media_management/templates/dashboard/index.html
+++ b/app/media_management/templates/dashboard/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container media-items">
         {% if media_items %}
-        <table class="media-items" cellspacing="0">
+        <table cellspacing="0">
             <tr>
                 <th><p>Media Item Id:</p></th>
                 <th><p>Original Url:</p></th>
@@ -25,6 +25,11 @@
         {% else %}
             <p>No media_items found.</p>
         {% endif %}
+
+        <div class="add-media-item">
+            <p>Add new media item</p>
+            <a href="{% url 'list_create_media' %}"><span>&#43;</span></button>
+        </div>
     </div>
 </body>
 </html>
