Including js in attempt to convert media type into intelligible strings

--- a/app/media_management/static/dashboard/index.css
+++ b/app/media_management/static/dashboard/index.css
@@ -12,6 +12,10 @@ tr, th {
     padding: 3px;
 }
 
+tr.special {
+    background-color: blanchedalmond;
+}
+
 .media-items img {
     width: 160px;
 }
