Changing elements to direct hit the POST from manage view

--- a/app/media_management/static/dashboard/index.css
+++ b/app/media_management/static/dashboard/index.css
@@ -28,7 +28,7 @@ tr.special {
     display: inline;
 }
 
-.add-media-item a {
+.add-media-item input {
     border: 1px solid gold;
     border-radius: 3px;
     background-color: green;
