--- a/app/media_management/templates/dashboard/index.html
+++ b/app/media_management/templates/dashboard/index.html
@@ -1,3 +1,4 @@
+{% load rest_framework %}
 {% load static %}
 
 <html>
@@ -26,6 +27,7 @@
             <tr class="special">
             <form action="{% url 'list_create_media' %}" method="post">
                 {% csrf_token %}
+                {% render_form serializer template_pack='rest_framework/inline' %}
                 <th>
                     <div class="add-media-item">
                         <p>Add</p>
