--- a/app/media_management/templates/dashboard/index.html
+++ b/app/media_management/templates/dashboard/index.html
@@ -16,21 +16,20 @@
                 <th><p>Original Url:</p></th>
                 <th><p>ClearCut Url:</p></th>
             </tr>
-        {% for media_item in media_items %}
+            {% for media_item in media_items %}
             <tr>
                 <th>{{ media_item.id }}</th>
                 <th class="media-type-to-name" data-value={{media_item.media_type}}></th>
                 <th><img src="{{ media_item.media_url_original }}" alt="Original media displayed"></th>
                 <th><img src="{{ media_item.media_url_clear_cut }}" alt="ClearCut media displayed"></th>
             </tr>
-        {% endfor %}
+            {% endfor %}
             <tr class="special">
             <form action="{% url 'list_create_media' %}" method="post">
                 {% csrf_token %}
-                {% render_form serializer template_pack='rest_framework/inline' %}
                 <th>
                     <div class="add-media-item">
-                        <p>Add</p>
+                        <p>New</p>
                         <input type="submit" value="&#43;">
                     </div>
                 </th>
@@ -42,10 +41,10 @@
                     </select>
                 </th>
                 <th>
-                    <input type="text" id="original-url" />
+                    <input type="text" id="original-url" placeholder="Original image url here" />
                 </th>
                 <th>
-                    <input type="text" id="clearcut-url" />
+                    <input type="text" id="clearcut-url" placeholder="ClearCut image url here" />
                 </th>
             </form>
             </tr>
