--- a/app/clear_cut/static/login/index.css
+++ b/app/clear_cut/static/login/index.css
@@ -1,13 +1,13 @@
 div.splash {
     height: 100%;
     margin: 0;
-    overflow: auto;
 }
 
 .splash img {
     position: absolute;
-    top: 0;
-    left: 26%;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     -webkit-transition: opacity 1.6s ease-in-out;
     -moz-transition: opacity 1.6s ease-in-out;
     -o-transition: opacity 1.6s ease-in-out;
@@ -15,11 +15,9 @@ div.splash {
 }
 
 form {
-    display: block;
-    position: absolute;
+    position: relative;
     text-align: center;
-    bottom: 0;
-    left: 34%;
+    padding-top: 300px;
     opacity: 0;
     z-index: 1;
     -webkit-transition: opacity 1.6s ease-in-out;
