Update title of manage page

--- a/app/media_management/templates/manage/index.html
+++ b/app/media_management/templates/manage/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>ClearCut Dashboard</title>
+    <title>ClearCut Manage</title>
     <link rel="stylesheet" href="{% static 'manage/index.css' %}" />
     <script type="text/javascript" src="{% static 'manage/utils.js' %}"></script>
 </head>
