--- a/app/media_management/static/manage/index.css
+++ b/app/media_management/static/manage/index.css
@@ -1,3 +1,17 @@
+div.item-media {
+    display: inline-block;
+    position: relative;
+    border: 1px grey dashed;
+}
+
+div.item-media:hover .original-image {
+    transform: translate(-101px);
+}
+
+div.item-media:hover .clearcut-image {
+    transform: translate(101px);
+}
+
 .item-wrapper {
     display: inline-block;
     padding: 0;
@@ -11,25 +25,17 @@
 .media-items img.clearcut-image {
     position: relative;
     left: 102px;
-    -webkit-transition: transform 1.6s;
-    -moz-transition: transform 1.6s;
-    -o-transition: transform 1.6s;
-    transition: transform 1.6s;
+    -webkit-transition: transform 1.0s;
+    -moz-transition: transform 1.0s;
+    -o-transition: transform 1.0s;
+    transition: transform 1.0s;
 }
 
 .media-items img.original-image {
     position: relative;
     left: -102px;
-    -webkit-transition: transform 1.6s;
-    -moz-transition: transform 1.6s;
-    -o-transition: transform 1.6s;
-    transition: transform 1.6s;
-}
-
-div.item-media:hover .original-image {
-    transform: translate(-102px);
-}
-
-div.item-media:hover .clearcut-image {
-    transform: translate(102px);
+    -webkit-transition: transform 1.0s;
+    -moz-transition: transform 1.0s;
+    -o-transition: transform 1.0s;
+    transition: transform 1.0s;
 }
