Styling tweeks to make the "item cards" look nicer

--- a/app/media_management/templates/manage/index.html
+++ b/app/media_management/templates/manage/index.html
@@ -11,6 +11,7 @@
 <body onload="init()">
     <!-- Actions bar -->
     <div class="actions">
+        <div class="display-clearcuts">Display clearcuts for all items</div>
         <div class="create-item">Drag 'n' Drop Zone here</div>
         {% comment %} <form action="{% url 'list_create_media' %}" method="post">
             {% csrf_token %}
