--- a/app/media_management/static/manage/index.css
+++ b/app/media_management/static/manage/index.css
@@ -14,8 +14,10 @@ div.item-media:hover .clearcut-image {
 
 .item-wrapper {
     display: inline-block;
-    padding: 0;
+    padding: 10px;
+    margin: 10px;
     border: 2px rebeccapurple solid;
+    border-radius: 30px;
 }
 
 .media-items img {
