--- a/app/clear_cut/templates/login.html
+++ b/app/clear_cut/templates/login.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>ClearCut Login</title>
+    <link href='http://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'login/index.css' %}" />
 </head>
 
