--- a/app/media_management/templates/manage/index.html
+++ b/app/media_management/templates/manage/index.html
@@ -4,20 +4,28 @@
 
 <head>
     <title>ClearCut Manage</title>
+    <link href='http://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'manage/index.css' %}" />
 </head>
 
 <body>
     <!-- Actions bar -->
     <div class="actions">
+        <!-- Create a new media item -->
+        <div class="action create-item">
+            <form action="{% url 'list_create_media' %}" method="get">
+                {% csrf_token %}
+                <input type="submit" id="create-new-media-item"/>
+                <label for="create-new-media-item" id="create-new-media-item-icon"><span>New Item</span></label>
+            </form>
+        </div>
+
         <!-- Global toggle on/off ClearCut image display -->
         <div class="action toggle">
             <input type="checkbox" id="display-clear-cuts"/>
             <label for="display-clear-cuts" id="display-clear-cuts-icon"><span>CC</span></label>
         </div>
         
-        <div class="action create-item">
-            <div class="create-item">Drag 'n' Drop Zone here</div>
         {% comment %} <form action="{% url 'list_create_media' %}" method="post">
             {% csrf_token %}
             <th>
@@ -40,17 +48,18 @@
                 <input type="text" id="clearcut-url" placeholder="ClearCut image url here" />
             </th>
         </form> {% endcomment %}
-        </div>
     </div>
 
-    <!-- List media items -->>
+    <!-- List media items -->
     <div class="container media-items">
         {% for media_item in media_items %}
         <div class="item-wrapper" data-id="{{media_item.id}}">
             <!-- Media item meta information here -->
-            <p class="item-media-type" data-value={{media_item.media_type}}></p>
             <p class="item-description">{{media_item.description}}</p>
-            <p class="item-label">{{media_item.label}}</p>
+            <div class="tags">
+                <p class="tag item-media-type" data-value={{media_item.media_type}}></p>
+                <p class="tag item-label">{{media_item.label}}</p>
+            </div>
             
             <!-- List all images for this media item -->
             {% for image in media_item.clear_cut_image.all %}
