--- a/app/media_management/static/manage/index.css
+++ b/app/media_management/static/manage/index.css
@@ -14,11 +14,11 @@ div.item-media {
 }
 
 div.item-media:hover .original-image {
-    transform: translate(-101px);
+    transform: translate(0, -101px);
 }
 
 div.item-media:hover .clearcut-image {
-    transform: translate(101px);
+    transform: translate(0, 101px);
 }
 
 div.actions {
@@ -80,13 +80,14 @@ p.item-description {
     border: 1px gray solid;
 }
 
-.media-items img {
+.item-media img {
+    display: block;
     width: 200px;
 }
 
 .media-items img.clearcut-image {
     position: relative;
-    left: 102px;
+    bottom: -100px;
     -webkit-transition: transform 1.0s;
     -moz-transition: transform 1.0s;
     -o-transition: transform 1.0s;
@@ -95,7 +96,7 @@ p.item-description {
 
 .media-items img.original-image {
     position: relative;
-    left: -102px;
+    bottom: 100px;
     -webkit-transition: transform 1.0s;
     -moz-transition: transform 1.0s;
     -o-transition: transform 1.0s;
