--- a/app/clear_cut/static/login/index.css
+++ b/app/clear_cut/static/login/index.css
@@ -39,9 +39,8 @@ p, input {
 }
 
 ul.errorlist {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Merienda One', Helvetica, sans-serif;
     color: red;
-    background-color: cornsilk;
 }
 
 ul, li {
