--- a/app/media_management/static/manage/index.css
+++ b/app/media_management/static/manage/index.css
@@ -14,7 +14,11 @@ div.item-media {
 }
 
 div.actions {
+    top: 0;
+    position: sticky;
+    position: -webkit-sticky; /* Safari */
     background-color: rgb(240, 240, 240);
+    z-index: 2;
 }
 
 div.action {
@@ -23,9 +27,9 @@ div.action {
 }
 
 label {
-    font-family: 'Merienda One', Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     padding: 5px;
-    background-color: coral;
+    background-color: paleturquoise;
     border: 1px black solid;
     border-radius: 50px;
 }
@@ -46,13 +50,14 @@ form {
     display: inline-block;
     padding: 10px;
     margin: 10px;
-    border: 2px rebeccapurple solid;
+    border: 0px rgb(240, 240, 240) solid;
     border-radius: 30px;
-    background-color: rgb(250, 227, 207);
+    background-color: paleturquoise;
+    box-shadow: 2px 2px royalblue;
 }
 
 .item-wrapper p {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Merienda One', Helvetica, sans-serif;
 }
 
 p.tag {
@@ -60,16 +65,17 @@ p.tag {
     padding: 3px;
     margin: 3px;
     margin-block-end: 0.5em;
-    border: 1px blue solid;
+    border: 1px black solid;
     border-radius: 5px;
+    background-color: white;
+    box-shadow: 2px 2px grey;
 }
 
 p.item-description {
     padding: 3px;
     margin-block-start: 0.5em;
     margin-block-end: 0.5em;
-    background-color: rgb(240, 240, 240);
-    border: 1px gray solid;
+    background-color: white;
 }
 
 .item-media img {
