Simplify serialize for use in the uploader

--- a/app/media_management/templates/manage/uploader.html
+++ b/app/media_management/templates/manage/uploader.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>ClearCut Upload</title>
+    <title>ClearCut Uploader</title>
     <link href='http://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'manage/uploader.css' %}" />
 </head>
