--- a/app/clear_cut/static/login/index.css
+++ b/app/clear_cut/static/login/index.css
@@ -46,3 +46,41 @@ ul.errorlist {
 ul, li {
     list-style: none;
 }
+
+.sr-only, input, select {
+    display: inline-block;
+    font-family: 'Merienda One', Helvetica, sans-serif;
+    min-width: 100px;
+    margin: 5px;
+    border-bottom: 2px solid black;
+}
+
+.sr-only:after {
+    content: ": ";
+}
+
+input[type="text"] {
+    border: none;
+    border-bottom: 2px solid black;
+    background-color: transparent;
+}
+
+input[type="text"]:focus {
+    outline: none;
+    border-bottom: 2px solid royalblue;
+}
+
+input[type="password"] {
+    border: none;
+    border-bottom: 2px solid black;
+    background-color: transparent;
+}
+
+input[type="password"]:focus {
+    outline: none;
+    border-bottom: 2px solid royalblue;
+}
+
+input[type="submit"]:hover {
+    cursor: pointer;
+}
