--- a/app/media_management/templates/manage/uploader.html
+++ b/app/media_management/templates/manage/uploader.html
@@ -14,20 +14,20 @@
         <form action="{% url 'list_create_media' %}" method="post">
             {% csrf_token %}
 
+            <!-- Actual media uploader -->
+            <!-- See https://www.smashingmagazine.com/2018/01/drag-drop-file-uploader-vanilla-js/ -->
+            <div class="dropzone" id="dropzone">
+                <p>Upload files by drag and drop or</p>
+                <input type="file" id="file-uploader" multiple accept="image/*" onchange="handleFiles(this.files)">
+                <label class="button" for="file-uploader" id="file-uploader icon">Select Files</label>
+                <div id="gallery"></div>
+            </div>
+
             <!-- Form meta data -->
             <div class="meta">
                 {% render_form serializer template_pack='rest_framework/inline' %}
                 <input type="submit" id="upload-item">
-                <label class="button" for="upload-item" id="upload-item-icon"><span id="upload-item-text">Upload</span></label>
-            </div>
-
-            <!-- Actual media uploader -->
-            <!-- See https://www.smashingmagazine.com/2018/01/drag-drop-file-uploader-vanilla-js/ -->
-            <div class="dropzone" id="dropzone">
-                <p>Upload multiple files via file selection or drag 'n' drop</p>
-                <div id="gallery"></div>
-                <input type="file" id="file-uploader" multiple accept="image/*" onchange="handleFiles(this.files)">
-                <label class="button" for="file-uploader" id="file-uploader icon">Select some files</label>
+                <label class="button" for="upload-item" id="upload-item-icon"><span id="upload-item-text">Upload Item</span></label>
             </div>
         </form>
     </div>
