--- a/app/media_management/static/manage/uploader.css
+++ b/app/media_management/static/manage/uploader.css
@@ -6,8 +6,8 @@ body {
       linear-gradient(to bottom, rgb(200, 230, 255) 1px, transparent 1px);
 }
 
-div.uploader {
-    height: auto;
+form {
+    min-height: 100%;
 }
 
 div.dropzone {
@@ -25,12 +25,19 @@ div.dropzone p {
     display: inline-block;
 }
 
+#file-upload-error {
+    display: none;
+    text-align: center;
+    font-family: 'Merienda One', Helvetica, sans-serif;
+    color: red;
+}
+
 #gallery {
     margin-top: 10px;
 }
 
 #gallery img {
-    width: 150px;
+    width: 100%;
     margin-bottom: 10px;
     margin-right: 10px;
     vertical-align: middle;
@@ -58,16 +65,12 @@ form #upload-item, #file-uploader {
 }
 
 div.meta {
-    bottom: 0;
-    position: sticky;
-    position: -webkit-sticky; /* Safari */
+    top: 100%;
     text-align: left;
     padding: 20px;
     padding-left: 20%;
     background-color: white;
     border-top: 1px black solid;
-    float: bottom;
-    z-index: 2;
     overflow: auto;
 }
 
