--- a/app/media_management/templates/manage/uploader.html
+++ b/app/media_management/templates/manage/uploader.html
@@ -7,12 +7,22 @@
     <title>ClearCut Uploader</title>
     <link href='http://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'manage/uploader.css' %}" />
+    
+    <script type="text/javascript">
+        window.endpoints = {
+            processItem: "/media-items/",
+            processMedia: "/manage/api/process-media/"
+        };
+    </script>
 </head>
 
 <body>
     <div class="uploader">
-        <form action="{% url 'list_create_media' %}" method="post">
+        <form onsubmit="saveItem()">
             {% csrf_token %}
+            <script>
+                window.csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+            </script>
 
             <!-- Actual media uploader -->
             <!-- See https://www.smashingmagazine.com/2018/01/drag-drop-file-uploader-vanilla-js/ -->
