Associate processed images with the created media item

--- a/app/media_management/templates/manage/uploader.html
+++ b/app/media_management/templates/manage/uploader.html
@@ -10,7 +10,7 @@
     
     <script type="text/javascript">
         window.endpoints = {
-            processItem: "/media-items/",
+            processItem: "/manage/api/media-items/",
             processMedia: "/manage/api/process-media/"
         };
     </script>
