Adding navigation menu

--- a/app/clear_cut/templates/login.html
+++ b/app/clear_cut/templates/login.html
@@ -11,8 +11,8 @@
 <body>
     <div class="splash">
         <!-- Splash images -->
-        <img class="final-image" src="{{ splash_image_final }}" alt="Final splash image">
-        <img class="initial-image" id="initial-image" src="{{ splash_image_initial }}" alt="Initial splash image">
+        <img class="final-image" src="{{ splash_image_final }}" alt="Clear Cut Logo">
+        <img class="initial-image" id="initial-image" src="{{ splash_image_initial }}" alt="Initial Clear Cut Logo">
         
         <!-- Actual login form -->
         <form class="login" method="POST" action="/login/">
