--- a/app/media_management/templates/manage/index.html
+++ b/app/media_management/templates/manage/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <!-- Navigation-->
+    {% include 'manage/navigation.html' %}
+
     <!-- Actions bar -->
     <div class="actions">
         <!-- Create a new media item -->
