--- a/app/clear_cut/static/login/index.css
+++ b/app/clear_cut/static/login/index.css
@@ -1,4 +1,9 @@
 /* Courtesty of https://stackoverflow.com/questions/3540194/how-to-make-a-grid-like-graph-paper-grid-with-just-css */
+* {
+    color: black;
+    font-family: Verdana, Helvetica, sans-serif;
+}
+
 body {
     background-size: 40px 40px;
     background-image:
@@ -34,12 +39,7 @@ form {
     transition: opacity 1.6s ease-in-out;
 }
 
-p, input {
-    font-family: 'Merienda One', Helvetica, sans-serif;
-}
-
 ul.errorlist {
-    font-family: 'Merienda One', Helvetica, sans-serif;
     color: red;
 }
 
@@ -49,7 +49,6 @@ ul, li {
 
 .sr-only, input, select {
     display: inline-block;
-    font-family: 'Merienda One', Helvetica, sans-serif;
     min-width: 100px;
     margin: 5px;
     border-bottom: 2px solid black;
