--- a/app/media_management/static/manage/uploader.css
+++ b/app/media_management/static/manage/uploader.css
@@ -1,4 +1,9 @@
 /* Courtesty of https://stackoverflow.com/questions/3540194/how-to-make-a-grid-like-graph-paper-grid-with-just-css */
+* {
+    color: black;
+    font-family: Verdana, Helvetica, sans-serif;
+}
+
 body {
     background-size: 40px 40px;
     background-image:
@@ -13,7 +18,6 @@ form {
 div.dropzone {
     border-radius: 20px;
     width: 580px;
-    font-family: 'Courier New', Courier, monospace;
     margin: 10px auto;
     padding: 20px;
     border: 2px dashed grey;
@@ -28,7 +32,6 @@ div.dropzone p {
 #file-upload-error {
     display: none;
     text-align: center;
-    font-family: 'Merienda One', Helvetica, sans-serif;
     color: red;
 }
 
@@ -44,7 +47,6 @@ div.dropzone p {
 }
 
 form label.button {
-    font-family: 'Courier New', Courier, monospace;
     padding: 5px;
     margin: 10px;
     background-color: paleturquoise;
@@ -80,7 +82,6 @@ div.meta .form-group {
 
 .sr-only, input, select {
     display: inline-block;
-    font-family: 'Merienda One', Helvetica, sans-serif;
     min-width: 100px;
     margin: 5px;
     border-bottom: 2px solid black;
